force-app/main/default/objects/Forecast_Snapshot__c/Forecast_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Point-in-time aggregates capturing forecast state at a given moment.</description>
    <label>Forecast Snapshot</label>
    <nameField><label>Forecast Snapshot Name</label><type>AutoNumber</type><displayFormat>FS-{000000}</displayFormat></nameField>
    <pluralLabel>Forecast Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>