force-app/main/default/objects/Forecast_Snapshot__c/fields/Achieved_At_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Achieved_At_Snapshot__c</fullName>
    <label>Achieved At Snapshot</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>