force-app/main/default/objects/Forecast_Snapshot__c/fields/Attainment_At_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Attainment_At_Snapshot__c</fullName>
    <label>Attainment At Snapshot</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>