force-app/main/default/objects/Forecast_Snapshot__c/fields/Best_Case_Count__c.field-meta.xml
<CustomField>
    <fullName>Best_Case_Count__c</fullName>
    <label>Best Case Count</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>