force-app/main/default/objects/Forecast_Snapshot__c/fields/Best_Case_Total__c.field-meta.xml
<CustomField>
    <fullName>Best_Case_Total__c</fullName>
    <label>Best Case Total</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>