force-app/main/default/objects/Forecast_Snapshot__c/fields/Category_6_Count__c.field-meta.xml
<CustomField>
    <fullName>Category_6_Count__c</fullName>
    <label>Category 6 Count</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>