force-app/main/default/objects/Forecast_Snapshot__c/fields/Category_7_Total__c.field-meta.xml
<CustomField>
    <fullName>Category_7_Total__c</fullName>
    <label>Category 7 Total</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>