force-app/main/default/objects/Forecast_Snapshot__c/fields/Category_Slot_Map__c.field-meta.xml
<CustomField>
    <fullName>Category_Slot_Map__c</fullName>
    <label>Category Slot Map</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>