force-app/main/default/objects/Forecast_Snapshot__c/fields/Closed_Won_Total__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Total__c</fullName>
    <label>Closed Won Total</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>