force-app/main/default/objects/Forecast_Snapshot__c/fields/Commit_Count__c.field-meta.xml
<CustomField>
    <fullName>Commit_Count__c</fullName>
    <label>Commit Count</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>