force-app/main/default/objects/Forecast_Snapshot__c/fields/Commit_Delta__c.field-meta.xml
<CustomField>
    <fullName>Commit_Delta__c</fullName>
    <label>Commit Delta</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>