force-app/main/default/objects/Forecast_Snapshot__c/fields/Coverage_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Ratio__c</fullName>
    <label>Coverage Ratio</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>