force-app/main/default/objects/Forecast_Snapshot__c/fields/Metric_Totals__c.field-meta.xml
<CustomField>
    <fullName>Metric_Totals__c</fullName>
    <label>Metric Totals</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>