force-app/main/default/objects/Forecast_Snapshot__c/fields/Pipeline_Count__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Count__c</fullName>
    <label>Pipeline Count</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>