force-app/main/default/objects/Forecast_Snapshot__c/fields/Pipeline_Delta__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Delta__c</fullName>
    <label>Pipeline Delta</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>