force-app/main/default/objects/Forecast_Snapshot__c/fields/Pipeline_Total__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Total__c</fullName>
    <label>Pipeline Total</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>