force-app/main/default/objects/Forecast_Snapshot__c/fields/Records_Added__c.field-meta.xml
<CustomField>
    <fullName>Records_Added__c</fullName>
    <label>Records Added</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>