force-app/main/default/objects/Forecast_Snapshot__c/fields/Records_Removed__c.field-meta.xml
<CustomField>
    <fullName>Records_Removed__c</fullName>
    <label>Records Removed</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>