force-app/main/default/objects/Forecast_Snapshot__c/fields/Scope_Id__c.field-meta.xml
<CustomField>
    <fullName>Scope_Id__c</fullName>
    <label>Scope Id</label>
    <type>Text</type>
    <length>50</length>
</CustomField>