force-app/main/default/objects/Forecast_Snapshot__c/fields/Target_At_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Target_At_Snapshot__c</fullName>
    <label>Target At Snapshot</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>